# matrixhub-db

./: .dockerignore  .env.db.example  .gitignore  .pgpass  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  servers.json
.github/workflows/: docs.yml
db/: Dockerfile
db/docker-entrypoint-initdb.d/: 10_extensions.sql  15_create_extra_dbs.sh  20_matrixhub_schema.sql  30_matrixhub_indexes.sql  40_pg_hba.sh
docs/: database.md  hub.md  index.md  installation.md  pgadmin.md  troubleshooting.md
monitoring/: create_metrics_role.sql
pgbouncer/: pgbouncer.ini  userlist.template
scripts/: backup_now.sh  bootstrap_host_oci.sh  build_db_image.sh  check_pgadmin.sh  close_firewall_ol9.sh  create_db_if_missing.sh  health_wait.sh  install_docker_ol9.sh  install_systemd_service.sh  open_firewall_ol9.sh  optimize.sh  pgadmin_install_and_list.sh  psql_shell.sh  run_db_prod.sh  run_exporter.sh  run_pgbouncer.sh  start_pgadmin.sh  start_pgadmin_only.sh  uninstall_systemd_service.sh
systemd/: matrixhub-db-backup.service  matrixhub-db-backup.timer  matrixhub-db.service
