[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "matrixhub-db"
version = "0.1.0"
description = "Dockerized Postgres + helper scripts for MatrixHub; docs via MkDocs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Agent Matrix" }
]
keywords = ["postgres", "docker", "devops", "matrixhub", "mkdocs"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Topic :: Software Development :: Build Tools"
]
dependencies = []

[project.optional-dependencies]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.0",
  "mkdocs-mermaid2-plugin>=1.1"
]
dev = [
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.8"
]

[tool.hatch.metadata]
allow-direct-references = true
